--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p> Use this site to get weather updates</p>
+        <p> This site was reated by Nithyanandam G. It used data from mapbox.com and weatherstack.com. </p>
         <form>
             <input placeholder="Location">
             <button>Search</button>
